tests/compile_fail/handler_arity_9.stderr
error[E0277]: the trait bound `asupersync::web::handler::HandlersSupportAtMostEightExtractorsGroupAdditionalInputsIntoARequestStruct: asupersync::web::handler::HandlerArityExceeded<_>` is not satisfied
  --> tests/compile_fail/handler_arity_9.rs:46:12
   |
35 |       let _handler = FnHandler9::<
   |  ____________________-
36 | |         _,
37 | |         Path<String>,
38 | |         QueryMap,
...  |
45 | |         Payload,
46 | |     >::new(audit);
   | |          - ^^^^^ unsatisfied trait bound
   | |__________|
   |            required by a bound introduced by this call
   |
   = help: the trait `asupersync::web::handler::HandlerArityExceeded<_>` is not implemented for `asupersync::web::handler::HandlersSupportAtMostEightExtractorsGroupAdditionalInputsIntoARequestStruct`
note: required by a bound in `asupersync::web::FnHandler9::<F, T1, T2, T3, T4, T5, T6, T7, T8, T9>::new`
  --> src/web/handler.rs
   |
   |     pub fn new(_func: F) -> Self
   |            --- required by a bound in this associated function
...
   |             HandlerArityExceeded<F>,
   |             ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `FnHandler9::<F, T1, T2, T3, T4, T5, T6, T7, T8, T9>::new`
